# python_labs

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: .~lock.check.csv#  check.csv  test2.txt
data/lab04/: dadada.txt  input_cp1251.txt
data/lab05/samples/: 0.json
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
data1/: .~lock.check.csv#  check.csv
src/: lab01.py
src/kr/: kr.py  kr2.py
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_podschet.py  07_shfr.py  c  demo.py  lab01.py  main.py  validate.py
src/lab02/: README.md  arrays.py  demo.py  matrix.py  model.py  tuples.py  validated.py
src/lab03/: README.md  base.py  demo.py  models.py  text_stats.py  validate.py
src/lab04/: README.md  __init__.py  aaaa.py  demo.py  interfaces.py  io_txt_csv.py  models.py  report.py  test.py  text_report.py
src/lab05/: README.MD  __init__.py  collection.py  csv_xlsx.py  demo.py  json_csv.py  main.py  strategies.py  test.py
src/lab05.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/lab06/: README.MD  README.md  cli_convert.py  cli_text.py  container.py  demo.py
src/lab07/: README.MD  README.md  app.py  cli.py  main.py  models.py  storage.py
src/lab08/: README.md  models.py  serialize.py
src/lab09/: README.md  laba09.py
src/lab10/: README.md  linked_list.py  structure.py
src/lib/: __init__.py  text.py
src/python_labs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: json_csv.py  test_text.py
