[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab05"
version = "0.1.0"
requires-python = ">=3.9"

[project.scripts]
test = "lab05.test:main"
json_csv = "lab05.json_csv:test"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lab05*"]
[tool.setuptools.package-data]
lab05 = [
    "data/**/*"
    ]