[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_labs"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.0.0",
]

[project.scripts]
main = "lab05.main:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false